# cdk-aws-serverless-otlp-kinesis-lambda

./: .gitignore  .projenrc.ts  Cargo.toml  README.md  package.json  pnpm-lock.yaml
.projen/: deps.json  tasks.json
src/: main.ts
src/functions/app-backend/: Cargo.toml
src/functions/app-frontend/: Cargo.toml
src/functions/client-node/: index.ts
src/functions/client-python/: Dockerfile  index.py  pyproject.toml
src/functions/client-rust/src/: main.rs
src/functions/otlp-forwarder-kinesis/: Cargo.toml
src/layers/otlp-stdout-kinesis-extension/: Cargo.toml
src/layers/otlp-stdout-kinesis-extension/src/: aggregation.rs  config.rs  kinesis.rs  otlp_parsing.rs  types.rs
src/stacks/: my-stack.ts
