[package]
name = "app-frontend"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
aws-config.workspace = true
aws-sdk-dynamodb.workspace = true
aws_lambda_events.workspace = true
chrono.workspace = true
lambda-lw-http-router.workspace = true
lambda-otel-lite.workspace = true
lambda_runtime.workspace = true
lazy_static.workspace = true
opentelemetry.workspace = true
reqwest.workspace = true
reqwest-middleware.workspace = true
reqwest-tracing.workspace = true
serde.workspace = true
serde_dynamo.workspace = true
serde_json.workspace = true
sha2.workspace = true
tera.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
