[package]
name = "otlp-stdout-kinesis-extension-layer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
aws-config = { workspace = true }
aws-sdk-kinesis = { workspace = true }
lambda-extension = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

# Added for platform event conversion and OTLP span export
anyhow = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
flate2 = { workspace = true }
hex = { workspace = true }
lambda-otel-lite = { workspace = true }
nix = { workspace = true, features = ["fs"] }
opentelemetry = { workspace = true }
opentelemetry-proto = { workspace = true, features = ["trace"] }
opentelemetry-semantic-conventions = { workspace = true, features = ["semconv_experimental"] }
opentelemetry_sdk = { workspace = true, features = ["trace", "rt-tokio"] }
otlp-stdout-span-exporter = { workspace = true }
prost = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }